--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boxing lastrefx 2</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h2>Boxing lastrefx 2</h2>
+    <div class="py-10 px-12 xl:px-36">
+        <!-- Banner  -->
+        <div>
+            <div class="mb-6">
+                <img src="./img/image.png" class="mx-auto flex w-full sm:h-56 h-64 object-fill" alt="">
+            </div>
+            <div class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 gap-4">
+                <button class="text-white bg-[#FF110F] text-xl sm:text-2xl rounded-xl p-4 sm:w-64 sm:h-16 w-full">
+                  POUND FOR POUND RANKINGS
+                </button>
+                <button class="text-white bg-[#FF110F] text-xl sm:text-2xl rounded-xl p-4 sm:w-64 sm:h-16 w-full">
+                  Fight predictions
+                </button>
+                <button class="text-white bg-[#FF110F] text-xl sm:text-2xl rounded-xl p-4 sm:w-64 sm:h-16 w-full">
+                  Fight Reactions
+                </button>
+              </div>
+                    
+        </div>
+    </div>
+
+    <!-- Footer here -->
+    <div class="">
+        Footer
+    </div>
+   
 </body>
 </html>
