--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
         <!-- Banner  -->
         <div>
             <div class="mb-6">
-                <img src="./img/image.png" class="mx-auto flex w-full sm:h-56 h-64 object-fill" alt="">
-            </div>
+                <img src="./img/image.png" class="mx-auto w-full h-44 lg:h-64 object-cover rounded-xl" alt="">
+            </div>            
             <div class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 gap-4">
-                <button class="text-white bg-[#FF110F] text-xl sm:text-2xl rounded-xl p-4 sm:w-64 sm:h-16 w-full">
+                <button class="text-white bg-[#FF110F] text-xl sm:text-2xl rounded-xl py-1 px-3 sm:w-64 w-full">
                   POUND FOR POUND RANKINGS
                 </button>
-                <button class="text-white bg-[#FF110F] text-xl sm:text-2xl rounded-xl p-4 sm:w-64 sm:h-16 w-full">
+                <button class="text-white bg-[#FF110F] text-xl sm:text-2xl rounded-xl py-1 px-3 sm:w-64 w-full uppercase">
                   Fight predictions
                 </button>
-                <button class="text-white bg-[#FF110F] text-xl sm:text-2xl rounded-xl p-4 sm:w-64 sm:h-16 w-full">
+                <button class="text-white bg-[#FF110F] text-xl sm:text-2xl rounded-xl py-1 px-3 sm:w-64 w-full uppercase">
                   Fight Reactions
                 </button>
               </div>
+              
                     
         </div>
     </div>
