--- a/index.html
+++ b/index.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boxing lastrefx 2</title>
+    <!-- Main Css link  -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Tailwind css Link  -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- font-awesome cdn -->
+    <link
+        rel="stylesheet"
+        href="https://site-assets.fontawesome.com/releases/v6.5.1/css/all.css"
+    >
 </head>
 <body>
     <div class="py-10 px-12 xl:px-36">
         <!-- Banner  -->
         <div>
-            <div class="mb-6">
+            <div class="relative mb-2 lg:mb-6">
                 <img src="./img/image.png" class="mx-auto w-full h-44 lg:h-64 object-cover rounded-xl" alt="">
-            </div>            
+                <div class="absolute top-4 right-4 flex gap-4">
+                    <button class="bg-[#101010] w-12 h-12 flex items-center justify-center rounded-md">
+                        <i class="fa-solid fa-info text-white text-2xl"></i>
+                    </button>
+                    <button class="bg-[#101010] w-12 h-12 flex items-center justify-center rounded-md">
+                        <i class="fa-solid fa-xmark text-white text-2xl"></i>
+                    </button>
+                </div>                
+            </div>
+            
+
             <div class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 gap-4">
                 <button class="text-white bg-[#FF110F] text-xl sm:text-2xl rounded-xl py-1 px-3 sm:w-64 w-full">
                   POUND FOR POUND RANKINGS
