--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         </div>
 
         <!-- BoxingPole Section  -->
-         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5">
-            <div>
+         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 border border-[#101010] rounded-xl my-4 lg:my-6 p-12 items-center">
+            <div class="flex mx-auto">
                 <img src="./img/Group 1000006443.png" alt="">
             </div>
             <div>
-                <h2 class="text-4xl text-[#101010]">THE OFFICIAL VOICE
+                <h2 class="text-2xl md:text-3xl lg:text-5xl text-[#101010] text-center">THE OFFICIAL VOICE <br>
                     OF BOXING FANS
                     AROUND THE WORLD</h2>
             </div>
