--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
                     AROUND THE WORLD</h2>
             </div>
          </div>
+         <div class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 gap-4">
+            <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3">
+                Select Language
+            </button>
+            <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3">
+                FREQUENTLY ASKED QUESTIONS
+            </button>
+         </div>    
     </div>
 
     <!-- Footer here -->
