--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             </div>
          </div>
          <div class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 gap-4">
-            <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3">
-                Select Language
+            <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3 flex items-center gap-2">
+                Select Language <img src="./img/Vector.png" alt="">
             </button>
             <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3">
                 FREQUENTLY ASKED QUESTIONS
