added ranking section

--- a/index.html
+++ b/index.html
@@ -45,24 +45,33 @@
         </div>
 
         <!-- BoxingPole Section  -->
-         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 border border-[#101010] rounded-xl my-4 lg:my-6 p-12 items-center">
-            <div class="flex mx-auto">
-                <img src="./img/Group 1000006443.png" alt="">
+        <div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 border border-[#101010] rounded-xl my-4 lg:my-6 p-12 items-center bg-gray-50">
+                <div class="flex mx-auto">
+                    <img src="./img/Group 1000006443.png" alt="">
+                </div>
+                <div>
+                    <h2 class="text-2xl md:text-3xl lg:text-5xl font-semibold text-[#101010] text-center">THE OFFICIAL VOICE <br>
+                        OF BOXING FANS
+                        AROUND THE WORLD</h2>
+                </div>
+             </div>
+             <div class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 gap-4">
+                <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3 flex items-center gap-2">
+                    Select Language <img src="./img/Vector.png" alt="">
+                </button>
+                <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3">
+                    FREQUENTLY ASKED QUESTIONS
+                </button>
+             </div>  
+        </div>
+         
+         <!-- Rankings  -->
+          <div class="">
+            <div class="flex">
+                <h2 class="py-16 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">POUND FOR POUND RANKINGS</h2>
             </div>
-            <div>
-                <h2 class="text-2xl md:text-3xl lg:text-5xl text-[#101010] text-center">THE OFFICIAL VOICE <br>
-                    OF BOXING FANS
-                    AROUND THE WORLD</h2>
-            </div>
-         </div>
-         <div class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 gap-4">
-            <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3 flex items-center gap-2">
-                Select Language <img src="./img/Vector.png" alt="">
-            </button>
-            <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3">
-                FREQUENTLY ASKED QUESTIONS
-            </button>
-         </div>    
+          </div>
     </div>
 
     <!-- Footer here -->
