added ranking box text

--- a/index.html
+++ b/index.html
@@ -67,9 +67,15 @@
         </div>
          
          <!-- Rankings  -->
-          <div class="">
+          <div>
             <div class="flex">
-                <h2 class="py-16 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">POUND FOR POUND RANKINGS</h2>
+                <h2 class="py-12 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">POUND FOR POUND RANKINGS</h2>
+            </div>
+            <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-6 items-center bg-gray-100">
+                <p class="text-[#101010] font-semibold text-xl md:text-3xl lg:text-3xl text-center"> SUBMIT YOUR TOP 10 POUND FOR POUND LIST BELOW.
+                BY PLACING EACH BOXER IN THE POSITION THEY BELONG.
+                </p>
+                <h2 class="py-8 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">PLEASE NOTE THE FOLLOWING:</h2>
             </div>
           </div>
     </div>
