--- a/index.html
+++ b/index.html
@@ -78,6 +78,33 @@
                 <h2 class="py-8 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">PLEASE NOTE THE FOLLOWING:</h2>
             </div>
           </div>
+            <!-- FooterUp Section  -->
+             <div>
+                <div class="relative my-2 lg:my-6">
+                    <img src="./img/image.png" class="mx-auto w-full h-44 lg:h-64 object-cover rounded-xl" alt="">
+                    <div class="absolute top-4 right-4 flex gap-4">
+                        <button class="bg-[#101010] w-12 h-12 flex items-center justify-center rounded-md">
+                            <i class="fa-solid fa-info text-white text-2xl"></i>
+                        </button>
+                        <button class="bg-[#101010] w-12 h-12 flex items-center justify-center rounded-md">
+                            <i class="fa-solid fa-xmark text-white text-2xl"></i>
+                        </button>
+                    </div>                
+                </div>
+                <div class="flex my-8">
+                    <div class="mx-auto">
+                        <img src="./img/Group 1000006443.png" alt="">
+                    </div>
+                </div>
+                <div>
+                    <h2 class="text-[#101010] font-semibold text-xl md:text-2xl lg:text-2xl text-center py-8">FOLLOW US ON SOCIAL MEDIA TO BE ALERTED <br>
+                        EVERY TIME WE PUBLISH A NEW POLL.
+                    </h2>
+                    <h2 class="text-[#101010] font-semibold text-xl md:text-2xl lg:text-2xl text-center uppercase">AND STAY UP TO DATE ON ALL THE LATEST <br>
+                        POLL RESULTS and pound for pound rankings.</h2>
+                </div>
+             </div>
+
     </div>
 
     <!-- Footer here -->
