--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
                     <h2 class="text-[#101010] font-semibold text-xl md:text-2xl lg:text-2xl text-center uppercase">AND STAY UP TO DATE ON ALL THE LATEST <br>
                         POLL RESULTS and pound for pound rankings.</h2>
                 </div>
+                <div class="flex">
+                    <div class="py-8 flex mx-auto gap-5 items-center text-center">
+                        <a href="#" class="bg-[#1877F2] px-4 py-2 rounded-full items-center"><i class="fa-brands fa-facebook-f text-white text-2xl"></i></a>
+                        <a href="#" class="bg-[#101010] px-3 py-2 rounded-full"><i class="fa-brands fa-x-twitter text-white text-2xl"></i></a>
+                        <a href="#" class="bg-[#FF110F] px-2.5 py-2 rounded-full"><i class="fa-brands fa-youtube text-white text-2xl"></i></a>
+                    </div>
+                </div>
              </div>
 
     </div>
