--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
          
          <!-- Rankings  -->
-          <div>
+        <div>
             <div class="flex">
                 <h2 class="py-12 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">POUND FOR POUND RANKINGS</h2>
             </div>
@@ -77,9 +77,10 @@
                 </p>
                 <h2 class="py-8 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">PLEASE NOTE THE FOLLOWING:</h2>
             </div>
-          </div>
-            <!-- FooterUp Section  -->
-             <div>
+        </div>
+
+        <!-- FooterUp Section  -->
+        <div>
                 <div class="relative my-2 lg:my-6">
                     <img src="./img/image.png" class="mx-auto w-full h-44 lg:h-64 object-cover rounded-xl" alt="">
                     <div class="absolute top-4 right-4 flex gap-4">
@@ -110,13 +111,18 @@
                         <a href="#" class="bg-[#FF110F] px-2.5 py-2 rounded-full"><i class="fa-brands fa-youtube text-white text-2xl"></i></a>
                     </div>
                 </div>
-             </div>
-
+        </div>
     </div>
 
     <!-- Footer here -->
-    <div class="">
-        Footer
+    <div class="bg-[#101010]">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 text-white gap-4 p-8">
+            <p class="text-xl md:text-2xl lg:text-2xl text-center uppercase">Terms and conditions</p>
+            <p class="text-xl md:text-2xl lg:text-2xl text-center uppercase">privacy policy</p>
+            <p class="text-xl md:text-2xl lg:text-2xl text-center uppercase">cookie policy</p>
+            <p class="text-xl md:text-2xl lg:text-2xl text-center uppercase">Send Us Feedback</p>
+        </div>
+        <p class="text-xl md:text-2xl lg:text-2xl text-center uppercase text-white pb-3">c boxingpoll 2024. all rights reserved</p>
     </div>
    
 </body>
