done rankings div

--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
                 <h2 class="py-12 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">POUND FOR POUND RANKINGS</h2>
             </div>
             <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-6 items-center bg-gray-100">
-                <p class="text-[#101010] font-semibold text-xl md:text-3xl lg:text-3xl text-center"> SUBMIT YOUR TOP 10 POUND FOR POUND LIST BELOW.
+                <p class="text-[#101010] font-semibold text-xl md:text-3xl lg:text-4xl text-center"> SUBMIT YOUR TOP 10 POUND FOR POUND LIST BELOW. <br>
                 BY PLACING EACH BOXER IN THE POSITION THEY BELONG.
                 </p>
-                <h2 class="py-8 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">PLEASE NOTE THE FOLLOWING:</h2>
+                <h2 class="pt-8 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">PLEASE NOTE THE FOLLOWING:</h2>
 
-                <div class="p-6 rounded-lg shadow-md space-y-4">
+                <div class="px-10 py-8 rounded-lg space-y-4">
                     <div class="flex gap-2">
-                        <p class="text-[#FF110F] text-xl md:text-2xl lg:text-2xl">1)</p>
+                        <p class="text-[#FF110F] text-xl">1)</p>
                         <div>
-                            <p class="font-semibold  text-xl md:text-2xl lg:text-2xl uppercase">
+                            <p class="font-semibold  text-xl uppercase">
                                 This list includes the top 10 boxers that appear on each of the following four pound-for-pound lists:
                             </p>
                             <ul class="list-none list-inside uppercase text-lg font-semibold pt-4">
@@ -92,13 +92,20 @@
                               </ul>
                         </div>
                     </div>
-                    
-                    <p class="text-red-500 font-semibold">
-                      2) Boxers are listed in alphabetical order, based on their last name. So be sure to scroll all the way up and down the list to see all of the boxers that are available to choose from.
-                    </p>
-                    <p class="text-red-500 font-semibold">
-                      3) You only need to select the top 10, as all other selections outside of the top 10 will be excluded from your list.
-                    </p>
+
+                    <div class="flex gap-2 py-4">
+                        <p class="text-[#FF110F] text-xl">2)</p>
+                        <p class="font-semibold  text-xl uppercase">
+                            Boxers are listed in alphabetical order, based on their last name. So be sure to scroll all the way up and down the list to see all of the boxers that are available to choose from.
+                        </p>
+                    </div>
+
+                    <div class="flex gap-2">
+                        <p class="text-[#FF110F] text-xl">3)</p>
+                        <p class="font-semibold  text-xl uppercase">
+                            You only need to select the top 10, as all other selections outside of the top 10 will be excluded from your list.
+                        </p>
+                    </div>
                   </div>                  
             </div>
         </div>
