playerbox card started

--- a/index.html
+++ b/index.html
@@ -110,6 +110,16 @@
             </div>
         </div>
 
+        <!-- PlayerBox -->
+         <div>
+            <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-6 items-center bg-gray-100">
+                <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-2xl">MIDDLEWEIGHT</h2>
+                    <p>LIMIT: 160 LBS / 72.5 KG</p>
+                </div>
+            </div>
+         </div>
+
         <!-- FooterUp Section  -->
         <div>
                 <div class="relative my-2 lg:my-6">
