--- a/index.html
+++ b/index.html
@@ -111,13 +111,30 @@
         </div>
 
         <!-- PlayerBox -->
-         <div>
-            <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-6 items-center bg-gray-100">
-                <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-2xl">MIDDLEWEIGHT</h2>
-                    <p>LIMIT: 160 LBS / 72.5 KG</p>
+         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+            <div class="border border-[#101010] rounded-xl my-4 lg:my-6 px-8 py-2 items-center bg-gray-100 col-span-2">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
+                    <div>
+                        <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
+                            <h2 class="bg-[#101010] text-white text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+                           <div class="px-4">
+                                <p class="font-bold text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
+                                <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                                <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                                    <p>ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                                    </p>
+                                    <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
+                                </div>
+                                <div class="flex justify-between gap-2 text-2xl font-bold text-[#FF110F]">
+                                    <h2>RECORD</h2>
+                                    <h2>15 - 0 (10 KO) </h2>
+                                </div>
+                           </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div>jj</div>
          </div>
 
         <!-- FooterUp Section  -->
