--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                 </p>
                 <h2 class="pt-8 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">PLEASE NOTE THE FOLLOWING:</h2>
 
-                <div class="px-10 py-8 rounded-lg space-y-4">
+                <div class="px-2 md:px-10 lg:px-10 py-8 rounded-lg space-y-4">
                     <div class="flex gap-2">
                         <p class="text-[#FF110F] text-xl">1)</p>
                         <div>
-                            <p class="font-semibold  text-xl uppercase">
+                            <p class="font-semibold text-xl uppercase">
                                 This list includes the top 10 boxers that appear on each of the following four pound-for-pound lists:
                             </p>
                             <ul class="list-none list-inside uppercase text-lg font-semibold pt-4">
