--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                     <div class="flex gap-2">
                         <p class="text-[#FF110F] text-xl">1)</p>
                         <div>
-                            <p class="font-semibold text-xl uppercase">
+                            <p class="font-semibold text-md md:text-xl lg:text-xl uppercase">
                                 This list includes the top 10 boxers that appear on each of the following four pound-for-pound lists:
                             </p>
-                            <ul class="list-none list-inside uppercase text-lg font-semibold pt-4">
+                            <ul class="list-none list-inside uppercase text-sm md:text-lg lg:text-lg font-semibold pt-4">
                                 <li>- Ring Magazine</li>
                                 <li>- ESPN</li>
                                 <li>- BoxRec</li>
@@ -95,14 +95,14 @@
 
                     <div class="flex gap-2 py-4">
                         <p class="text-[#FF110F] text-xl">2)</p>
-                        <p class="font-semibold  text-xl uppercase">
+                        <p class="font-semibold  text-md md:text-xl lg:text-xl uppercase">
                             Boxers are listed in alphabetical order, based on their last name. So be sure to scroll all the way up and down the list to see all of the boxers that are available to choose from.
                         </p>
                     </div>
 
                     <div class="flex gap-2">
                         <p class="text-[#FF110F] text-xl">3)</p>
-                        <p class="font-semibold  text-xl uppercase">
+                        <p class="font-semibold  text-md md:text-xl lg:text-xl uppercase">
                             You only need to select the top 10, as all other selections outside of the top 10 will be excluded from your list.
                         </p>
                     </div>
@@ -116,49 +116,65 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
                     <div>
                         <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                            <h2 class="bg-[#101010] text-white text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+                            <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
                            <div class="px-4">
-                                <p class="font-bold text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
+                                <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
                                 <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                                <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                                    <p>ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                                <div class="py-3 flex items-center flex-wrap text-2xl font-semibold gap-4">
+                                    <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
                                     </p>
                                     <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
                                 </div>
-                                <div class="flex justify-between gap-2 text-2xl font-bold text-[#FF110F]">
+                                <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                                     <h2>RECORD</h2>
                                     <h2>15 - 0 (10 KO) </h2>
                                 </div>
                            </div>
                         </div>
                         <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                            <h2 class="bg-[#101010] text-white text-2xl font-semibold rounded-md text-center p-2">JUNIOR WELTERWEIGHT
+                            <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR WELTERWEIGHT
                             </h2>
                            <div class="px-4">
-                                <p class="font-bold text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 140 LBS / 63.5 KG</p>
+                                <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 140 LBS / 63.5 KG</p>
                                 <img src="./img/Player/OLEKSANDR USYK (1).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                                <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                                    <p>TEOFIMO 'THE TAKEOVER' LOPEZ
+                                <div class="py-3 flex items-center flex-wrap text-2xl font-semibold gap-4">
+                                    <p class="text-sm md:text-2xl lg:text-2xl">TEOFIMO 'THE TAKEOVER' LOPEZ
                                     </p>
                                     <img src="./img/Player/flag/AUSTRALIA FLAG (1).png" alt="">
                                 </div>
-                                <div class="flex justify-between gap-2 text-2xl font-bold text-[#FF110F]">
+                                <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                                     <h2>RECORD</h2>
                                     <h2>21 - 1 (13 KO) </h2>
                                 </div>
                            </div>
                         </div>
                         <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                            <h2 class="bg-[#101010] text-white text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+                            <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
                            <div class="px-4">
-                                <p class="font-bold text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
+                                <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
                                 <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                                <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                                    <p>ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                                <div class="py-3 flex items-center flex-wrap text-2xl font-semibold gap-4">
+                                    <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
                                     </p>
                                     <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
                                 </div>
-                                <div class="flex justify-between gap-2 text-2xl font-bold text-[#FF110F]">
+                                <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                                    <h2>RECORD</h2>
+                                    <h2>15 - 0 (10 KO) </h2>
+                                </div>
+                           </div>
+                        </div>
+                        <div class="border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
+                            <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+                           <div class="px-4">
+                                <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
+                                <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                                <div class="py-3 flex items-center flex-wrap text-2xl font-semibold gap-4">
+                                    <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                                    </p>
+                                    <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
+                                </div>
+                                <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                                     <h2>RECORD</h2>
                                     <h2>15 - 0 (10 KO) </h2>
                                 </div>
