--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </div>
             </div>
                <!-- Scroll buttons -->
-               <div class="absolute top-1/2 right-[-3rem] flex items-center gap-2">
+               <div class="absolute top-1/2 right-[-2rem] md:right-[-1rem] lg:right-[1px] flex items-center gap-2">
                 <div class="flex flex-col space-y-2">
                     <button id="scrollUp" class="p-2 hover:shadow text-4xl">
                         <i class="fa-solid fa-arrow-up"></i>
