--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <div class="relative mb-2 lg:mb-6">
                 <img src="./img/image.png" class="mx-auto w-full h-44 lg:h-64 object-cover rounded-xl" alt="">
                 <div class="absolute top-4 right-4 flex gap-4">
-                    <button class="bg-[#101010] w-12 h-12 flex items-center justify-center rounded-md">
-                        <i class="fa-solid fa-info text-white text-2xl"></i>
+                    <button class="bg-[#101010] w-8 h-8 lg:w-12 lg:h-12 flex items-center justify-center rounded-md">
+                        <i class="fa-solid fa-info text-white text-md lg:text-2xl"></i>
                     </button>
-                    <button class="bg-[#101010] w-12 h-12 flex items-center justify-center rounded-md">
-                        <i class="fa-solid fa-xmark text-white text-2xl"></i>
+                    <button class="bg-[#101010] w-8 h-8 lg:w-12 lg:h-12 flex items-center justify-center rounded-md">
+                        <i class="fa-solid fa-xmark text-white text-md lg:text-2xl"></i>
                     </button>
                 </div>                
             </div>
@@ -111,7 +111,7 @@
         </div>
 
         <!-- PlayerBox -->
-        <div class="relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+        <div class="relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
             <div class="border border-[#101010] rounded-xl my-4 lg:my-6 px-8 py-2 items-center bg-gray-100 col-span-2">
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
                     <div id="scrollContainer" class="h-[72rem] overflow-y-scroll">
@@ -184,7 +184,7 @@
                 </div>
             </div>
                <!-- Scroll buttons -->
-               <div class="absolute top-1/2 right-[-2rem] md:right-[-1rem] lg:right-[1px] flex items-center gap-2">
+            <div class="absolute top-1/2 right-[-2rem] md:right-[-1rem] lg:right-[1px] flex items-center gap-2">
                 <div class="flex flex-col space-y-2">
                     <button id="scrollUp" class="p-2 hover:shadow text-4xl">
                         <i class="fa-solid fa-arrow-up"></i>
@@ -203,13 +203,13 @@
                 <div class="relative my-2 lg:my-6">
                     <img src="./img/image.png" class="mx-auto w-full h-44 lg:h-64 object-cover rounded-xl" alt="">
                     <div class="absolute top-4 right-4 flex gap-4">
-                        <button class="bg-[#101010] w-12 h-12 flex items-center justify-center rounded-md">
-                            <i class="fa-solid fa-info text-white text-2xl"></i>
+                        <button class="bg-[#101010] w-8 h-8 lg:w-12 lg:h-12 flex items-center justify-center rounded-md">
+                            <i class="fa-solid fa-info text-white text-md lg:text-2xl"></i>
                         </button>
-                        <button class="bg-[#101010] w-12 h-12 flex items-center justify-center rounded-md">
-                            <i class="fa-solid fa-xmark text-white text-2xl"></i>
+                        <button class="bg-[#101010] w-8 h-8 lg:w-12 lg:h-12 flex items-center justify-center rounded-md">
+                            <i class="fa-solid fa-xmark text-white text-md lg:text-2xl"></i>
                         </button>
-                    </div>                
+                    </div>                 
                 </div>
                 <div class="flex my-8">
                     <div class="mx-auto">
