--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                 </p>
                 <h2 class="pt-8 mx-auto text-2xl lg:text-4xl md:text-4xl text-center text-[#FF110F] font-semibold">PLEASE NOTE THE FOLLOWING:</h2>
 
-                <div class="px-2 md:px-10 lg:px-10 py-8 rounded-lg space-y-4">
+                <div class="px-2 md:px-10 lg:px-24 py-8 rounded-lg space-y-4">
                     <div class="flex gap-2">
-                        <p class="text-[#FF110F] text-xl">1)</p>
+                        <p class="text-[#FF110F] text-2xl font-semibold">1)</p>
                         <div>
                             <p class="font-semibold text-md md:text-xl lg:text-xl uppercase">
                                 This list includes the top 10 boxers that appear on each of the following four pound-for-pound lists:
@@ -94,19 +94,19 @@
                     </div>
 
                     <div class="flex gap-2 py-4">
-                        <p class="text-[#FF110F] text-xl">2)</p>
+                        <p class="text-[#FF110F] text-2xl font-semibold">2)</p>
                         <p class="font-semibold  text-md md:text-xl lg:text-xl uppercase">
                             Boxers are listed in alphabetical order, based on their last name. So be sure to scroll all the way up and down the list to see all of the boxers that are available to choose from.
                         </p>
                     </div>
 
                     <div class="flex gap-2">
-                        <p class="text-[#FF110F] text-xl">3)</p>
+                        <p class="text-[#FF110F] text-2xl font-semibold">3)</p>
                         <p class="font-semibold  text-md md:text-xl lg:text-xl uppercase">
                             You only need to select the top 10, as all other selections outside of the top 10 will be excluded from your list.
                         </p>
                     </div>
-                  </div>                  
+                </div>                  
             </div>
         </div>
 
