modified banner position

--- a/index.html
+++ b/index.html
@@ -17,9 +17,31 @@
 </head>
 <body>
     <div class="py-10 px-12 xl:px-36">
-        <!-- Banner  -->
+    <!-- Banner  -->
         <div>
-            <div class="relative mb-2 lg:mb-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 border border-[#101010] rounded-xl mb-4 lg:mt-2 lg:mb-6 p-12 items-center bg-gray-50">
+                <div class="flex mx-auto">
+                    <img src="./img/Group 1000006443.png" alt="">
+                </div>
+                <div>
+                    <h2 class="text-2xl md:text-3xl lg:text-5xl font-semibold text-[#101010] text-center">THE OFFICIAL VOICE <br>
+                        OF BOXING FANS
+                        AROUND THE WORLD</h2>
+                </div>
+             </div>
+             <div class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 gap-4">
+                <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3 flex items-center gap-2">
+                    Select Language <img src="./img/Vector.png" alt="">
+                </button>
+                <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3">
+                    FREQUENTLY ASKED QUESTIONS
+                </button>
+             </div>  
+        </div>
+
+    <!-- BoxingPole Section  -->
+        <div>
+            <div class="relative my-6 lg:my-10">
                 <img src="./img/image.png" class="mx-auto w-full h-44 lg:h-64 object-cover rounded-xl" alt="">
                 <div class="absolute top-4 right-4 flex gap-4">
                     <button class="bg-[#101010] w-8 h-8 lg:w-12 lg:h-12 flex items-center justify-center rounded-md">
@@ -42,28 +64,6 @@
                   Fight Reactions
                 </button>
               </div>    
-        </div>
-
-        <!-- BoxingPole Section  -->
-        <div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 border border-[#101010] rounded-xl my-4 lg:my-6 p-12 items-center bg-gray-50">
-                <div class="flex mx-auto">
-                    <img src="./img/Group 1000006443.png" alt="">
-                </div>
-                <div>
-                    <h2 class="text-2xl md:text-3xl lg:text-5xl font-semibold text-[#101010] text-center">THE OFFICIAL VOICE <br>
-                        OF BOXING FANS
-                        AROUND THE WORLD</h2>
-                </div>
-             </div>
-             <div class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 gap-4">
-                <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3 flex items-center gap-2">
-                    Select Language <img src="./img/Vector.png" alt="">
-                </button>
-                <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3">
-                    FREQUENTLY ASKED QUESTIONS
-                </button>
-             </div>  
         </div>
          
          <!-- Rankings  -->
