--- a/homeC1.html
+++ b/homeC1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boxing lastrefx 2</title>
+    <title>Boxing lastrefx 2(C1)</title>
     <!-- Main Css link  -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- Tailwind css Link  -->
@@ -30,8 +30,8 @@
                 </div>
              </div>
              <div class="flex flex-col sm:flex-row sm:justify-between sm:gap-6 gap-4">
-                <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3 flex items-center gap-2 flex justify-center text-center">
-                    Select Language <img src="./img/Vector.png" alt="">
+                <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3 flex items-center gap-2 text-center flex justify-center">
+                    Select Language <img src="./img/Vector.png" class="" alt="">
                 </button>
                 <button class="text-white bg-[#101010] text-xl sm:text-2xl rounded-xl px-5 py-3">
                     FREQUENTLY ASKED QUESTIONS
