--- a/homeC1.html
+++ b/homeC1.html
@@ -78,19 +78,19 @@
         <!-- PlayerBox -->
         <div>
             <div class="flex justify-center">
-                <div class=" w-96 border border-[#101010] rounded-xl my-4 lg:my-6 p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+                <div class=" w-96 my-3 lg:my-3 border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2 mb-4">ALL WEIGHTS
+                    </h2>
                    <div class="px-4">
-                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
-                        <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                            <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                        <img src="./img/Player/OLEKSANDR USYK dd (1).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4 justify-between">
+                            <p class="text-sm md:text-2xl lg:text-2xl">OLEKSANDR USYK
                             </p>
-                            <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
+                            <img src="./img/Player/flag/UKRAINE FLAG.png" alt="">
                         </div>
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
-                            <h2>15 - 0 (10 KO) </h2>
+                            <h2>22 - 0 (14 KO)</h2>
                         </div>
                    </div>
                 </div>
@@ -98,17 +98,17 @@
             <div class="flex justify-center flex-wrap gap-8 my-3 lg:my-3">
                 <div class="w-96 border border-[#101010] rounded-xl  p-3 items-center bg-gray-50">
                     <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
-                   <div class="px-4">
-                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
-                        <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                            <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                    <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: NONE</p>
+                    <div class="px-4">
+                        <img src="./img/Player/OLEKSANDR USYK dd (1).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4 justify-between">
+                            <p class="text-sm md:text-2xl lg:text-2xl">OLEKSANDR USYK
                             </p>
-                            <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
+                            <img src="./img/Player/flag/UKRAINE FLAG.png" alt="">
                         </div>
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
-                            <h2>15 - 0 (10 KO) </h2>
+                            <h2>22 - 0 (14 KO)</h2>
                         </div>
                    </div>
                 </div>
@@ -130,20 +130,19 @@
                 </div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 my-6">
-                <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR WELTERWEIGHT
-                    </h2>
+                <div class=" border border-[#101010] rounded-xl  p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
                    <div class="px-4">
-                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 140 LBS / 63.5 KG</p>
-                        <img src="./img/Player/OLEKSANDR USYK (1).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
+                        <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
                         <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                            <p class="text-sm md:text-2xl lg:text-2xl">TEOFIMO 'THE TAKEOVER' LOPEZ
+                            <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
                             </p>
-                            <img src="./img/Player/flag/AUSTRALIA FLAG (1).png" alt="">
+                            <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
                         </div>
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
-                            <h2>21 - 1 (13 KO) </h2>
+                            <h2>15 - 0 (10 KO) </h2>
                         </div>
                    </div>
                 </div>
