--- a/homeC1.html
+++ b/homeC1.html
@@ -97,7 +97,7 @@
             </div>
             <div class="flex justify-center flex-wrap gap-8 my-3 lg:my-3">
                 <div class="w-96 border border-[#101010] rounded-xl  p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">HEAVYWEIGHT</h2>
                     <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: NONE</p>
                     <div class="px-4">
                         <img src="./img/Player/OLEKSANDR USYK dd (1).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
@@ -112,37 +112,57 @@
                         </div>
                    </div>
                 </div>
-                <div class=" w-96 border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
-                   <div class="px-4">
-                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
-                        <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                            <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                <div class="w-96 border border-[#101010] rounded-xl  p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">CRUISERWEIGHT</h2>
+                    <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 200 LBS / 91 KG</p>
+                    <div class="px-4">
+                        <img src="./img/Player/OLEKSANDR USYK (1)22.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4 justify-between">
+                            <p class="text-sm md:text-2xl lg:text-2xl">JAI OPETAIA
                             </p>
-                            <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
+                            <img src="./img/Player/flag/australia.png" alt="">
                         </div>
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
-                            <h2>15 - 0 (10 KO) </h2>
+                            <h2>25- 0 (19 KO)</h2>
                         </div>
                    </div>
                 </div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 my-6">
                 <div class=" border border-[#101010] rounded-xl  p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">LIGHT HEAVYWEIGHT
+                    </h2>
                    <div class="px-4">
-                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
-                        <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 175 LBS / 79 KG
+                        </p>
+                        <img src="./img/Player/OLEKSANDR USYK (2).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
                         <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                            <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                            <p class="text-sm md:text-2xl lg:text-2xl">ARTUR BETERBIEV
                             </p>
-                            <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
+                            <img src="./img/Player/flag/RUSSIA FLAG.png" alt="">
                         </div>
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
-                            <h2>15 - 0 (10 KO) </h2>
+                            <h2>20 - 0 (20 KO) </h2>
+                        </div>
+                   </div>
+                </div>
+                <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">SUPER MIDDLEWEIGHT
+                    </h2>
+                   <div class="px-4">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 168 LBS / 76.2 KG
+                        </p>
+                        <img src="./img/Player/OLEKSANDR USYK (3).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
+                            <p class="text-sm md:text-2xl lg:text-2xl">SAUL 'CANELO' ALVAREZ
+                            </p>
+                            <img src="./img/Player/flag/Mexico.png" alt="">
+                        </div>
+                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
+                            <h2>RECORD</h2>
+                            <h2>61 - 2 (39 KO)</h2>
                         </div>
                    </div>
                 </div>
@@ -154,23 +174,7 @@
                         <div class="py-3 flex items-center text-2xl font-semibold gap-4">
                             <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
                             </p>
-                            <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
-                        </div>
-                        <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
-                            <h2>RECORD</h2>
-                            <h2>15 - 0 (10 KO) </h2>
-                        </div>
-                   </div>
-                </div>
-                <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
-                   <div class="px-4">
-                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
-                        <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
-                        <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                            <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
-                            </p>
-                            <img src="./img/Player/flag/AUSTRALIA FLAG.png" alt="">
+                            <img src="./img/Player/flag/Kazakhstan.png" alt="">
                         </div>
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
