--- a/homeC1.html
+++ b/homeC1.html
@@ -254,87 +254,89 @@
         <div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 my-6">
                 <div class=" border border-[#101010] rounded-xl  p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">LIGHT HEAVYWEIGHT
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">LIGHTWEIGHT
                     </h2>
                    <div class="px-4">
-                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 175 LBS / 79 KG
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 135 LBS / 61.2 KG
                         </p>
-                        <img src="./img/Player/OLEKSANDR USYK (2).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <img src="./img/Player/OLEKSANDR USYK (6).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
                         <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                            <p class="text-sm md:text-2xl lg:text-2xl">ARTUR BETERBIEV
+                            <p class="text-sm md:text-2xl lg:text-2xl">GERVONTA 'TANK' DAVIS
                             </p>
-                            <img src="./img/Player/flag/RUSSIA FLAG.png" alt="">
+                            <img src="./img/Player/flag/USA.png" alt="">
                         </div>
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
-                            <h2>20 - 0 (20 KO) </h2>
+                            <h2>30 - 0 (28 KO) </h2>
                         </div>
                    </div>
                 </div>
                 <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">SUPER MIDDLEWEIGHT
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR LIGHTWEIGHT
                     </h2>
                    <div class="px-4">
-                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 168 LBS / 76.2 KG
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 130 LBS / 59 KG
                         </p>
-                        <img src="./img/Player/OLEKSANDR USYK (3).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <img src="./img/Player/OLEKSANDR USYK (7).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
                         <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                            <p class="text-sm md:text-2xl lg:text-2xl">SAUL 'CANELO' ALVAREZ
+                            <p class="text-sm md:text-2xl lg:text-2xl">EMANUEL 'VAQUERO' NAVARETTE
                             </p>
                             <img src="./img/Player/flag/Mexico.png" alt="">
                         </div>
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
-                            <h2>61 - 2 (39 KO)</h2>
+                            <h2>38 - 2 (31 KO)</h2>
                         </div>
                    </div>
                 </div>
                 <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">MIDDLEWEIGHT</h2>
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">FEATHERWEIGHT</h2>
                    <div class="px-4">
-                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 160 LBS / 72.5 KG</p>
-                        <img src="./img/Player/OLEKSANDR USYK.png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 126 LBS / 57.1 KG
+                        </p>
+                        <img src="./img/Player/OLEKSANDR USYK (8).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
                         <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                            <p class="text-sm md:text-2xl lg:text-2xl">ZHANIBEK 'QAZAQ STYLE' ALIMKHANULY
+                            <p class="text-sm md:text-2xl lg:text-2xl">LEIGH 'LEIGH-THAL' WOOD
                             </p>
-                            <img src="./img/Player/flag/Kazakhstan.png" alt="">
+                            <img src="./img/Player/flag/ENGLAND FLAG.png" alt="">
                         </div>
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
-                            <h2>15 - 0 (10 KO) </h2>
+                            <h2>28 - 3 (17 KO)</h2>
                         </div>
                    </div>
                 </div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 my-6">
                 <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR MIDDLEWEIGHT
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR FEATHERWEIGHT
                     </h2>
                    <div class="px-4">
-                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 154 LBS / 70 KG
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 122 LBS / 55.3 KG
                         </p>
                         <img src="./img/Player/OLEKSANDR USYK (4).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
                         <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                            <p class="text-sm md:text-2xl lg:text-2xl">TERENCE 'BUD' CRAWFORD
+                            <p class="text-sm md:text-2xl lg:text-2xl">NAOYA 'MONSTER' INOUE
                             </p>
-                            <img src="./img/Player/flag/USA.png" alt="">
+                            <img src="./img/Player/flag/JAPAN FLAG.png" alt="">
                         </div>
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
-                            <h2>40 - 0 (31 KO) </h2>
+                            <h2>27 - 0 (24 KO) </h2>
                         </div>
                    </div>
                 </div>
                 <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">WELTERWEIGHT</h2>
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">BANTAMWEIGHT
+                    </h2>
                    <div class="px-4">
-                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 147 LBS / 66.7 KG
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 118 LBS / 53.5 KG
                         </p>
                         <img src="./img/Player/OLEKSANDR USYK (5).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
                         <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                            <p class="text-sm md:text-2xl lg:text-2xl">JARON 'BOOTS' ENNIS
+                            <p class="text-sm md:text-2xl lg:text-2xl">JUNTO NAKATANI
                             </p>
-                            <img src="./img/Player/flag/USA.png" alt="">
+                            <img src="./img/Player/flag/JAPAN FLAG.png" alt="">
                         </div>
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
@@ -343,20 +345,20 @@
                    </div>
                 </div>
                 <div class="border border-[#101010] rounded-xl p-3 items-center bg-gray-50">
-                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR WELTERWEIGHT
+                    <h2 class="bg-[#101010] text-white text-md md:text-2xl lg:text-2xl font-semibold rounded-md text-center p-2">JUNIOR BANTAMWEIGHT
                     </h2>
                    <div class="px-4">
-                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 140 LBS / 63.5 KG
+                        <p class="font-bold text-md md:text-xl lg:text-xl text-[#4F4F4F] py-3 text-center">LIMIT: 115 LBS / 52.1 KG
                         </p>
                         <img src="./img/Player/OLEKSANDR USYK (1).png" class="mx-auto w-72 md:w-full lg:w-full" alt="">
                         <div class="py-3 flex items-center text-2xl font-semibold gap-4">
-                            <p class="text-sm md:text-2xl lg:text-2xl">TEOFIMO 'THE TAKEOVER' LOPEZ
+                            <p class="text-sm md:text-2xl lg:text-2xl">JESSE 'BAM' RODRIGUEZ
                             </p>
                             <img src="./img/Player/flag/USA.png" alt="">
                         </div>
                         <div class="flex flex-wrap justify-between gap-2 text-md md:text-2xl lg:text-2xl font-bold text-[#FF110F]">
                             <h2>RECORD</h2>
-                            <h2>21 - 1 (13 KO) </h2>
+                            <h2>20 - 0 (13 KO)</h2>
                         </div>
                    </div>
                 </div>
